--- a/.github/workflows/test-release-builds.yml
+++ b/.github/workflows/test-release-builds.yml
@@ -14,7 +14,7 @@ jobs:
                 include:
                     - name: Ubuntu 64bit (gcc)
                       os: ubuntu-latest
-                      args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
+                      args: -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
                       artifacts_name: PCem-vNext-Ubuntu-${{ github.run_number }}
                       artifacts_path: PCem-${{ github.sha }}.tar.bz2
                       installdeps: >-
@@ -27,7 +27,7 @@ jobs:
                     - name: Windows 32bits (MSYS2)
                       os: windows-latest
                       compiler: MINGW32
-                      args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
+                      args: -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
                       artifacts_name: PCem-vNext-Windows-MINGW32-${{ github.run_number }}
                       artifacts_path: PCem-${{ github.sha }}.zip
                       installdeps: >-
@@ -45,7 +45,7 @@ jobs:
                     - name: Windows 64bits (MSYS2)
                       os: windows-latest
                       compiler: MINGW64
-                      args: -DUSE_NETWORKING=ON -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
+                      args: -DCMAKE_BUILD_TYPE=Release -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
                       artifacts_name: PCem-vNext-Windows-MINGW64-${{ github.run_number }}
                       artifacts_path: PCem-${{ github.sha }}.zip
                       installdeps: >-
