Added X11 Force Mode as a option that can be turned on and off. See #128 for details.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ endif()
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
         option(USE_ALSA "Build PCem with MIDI output using ALSA" OFF)
         message("ALSA MIDI Support: ${USE_ALSA}")
+        option(FORCE_X11 "Force X11 Mode on Wayland Systems" ON)
+        message("Force X11 Mode on Wayland Systems: ${FORCE_X11}")
 endif()
 
 option(USE_EXPERIMENTAL "Build PCem with experimental code" OFF)
