Last Test, this should upload only packaged artifacts

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -166,6 +166,6 @@ jobs:
           aws_key_id: ${{secrets.nte_cdn_s3_key_id}}
           aws_secret_access_key: ${{secrets.nte_cdn_s3_secret_access_key}}
           aws_bucket: pcem-dev-builds
-          source_dir: ./dist
-          destination_dir: ${{ matrix.artifacts_name }}
-          endpoint: https://cdn.ntgecdn.com:443
+          source_dir: ./dist/${{ matrix.artifacts_path }}
+          destination_dir: ''
+          endpoint:  https://cdn.ntgecdn.com:443    
