--- a/.github/workflows/test-relwithdebinfo-builds.yml
+++ b/.github/workflows/test-relwithdebinfo-builds.yml
@@ -15,8 +15,8 @@ jobs:
                     - name: Ubuntu 64bit (gcc)
                       os: ubuntu-latest
                       args: -DCMAKE_BUILD_TYPE=RelWithDebInfo -DPCEM_RELDEB_AS_RELEASE=OFF -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
-                      artifacts_name: PCem-vNext-Ubuntu-${{ github.run_number }}
-                      artifacts_path: PCem-${{ github.sha }}.tar.bz2
+                      artifacts_name: PCem-RelWithDebInfo-vNext-Ubuntu-${{ github.run_number }}
+                      artifacts_path: PCem-RelWithDebInfo-vNext-Ubuntu-${{ github.run_number }}-${{ github.sha }}.tar.bz2
                       installdeps: >-
                           libsdl2-dev
                           libopenal-dev
@@ -28,8 +28,8 @@ jobs:
                       os: windows-latest
                       compiler: MINGW32
                       args: -DCMAKE_BUILD_TYPE=RelWithDebInfo -DPCEM_RELDEB_AS_RELEASE=OFF -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
-                      artifacts_name: PCem-vNext-Windows-MINGW32-${{ github.run_number }}
-                      artifacts_path: PCem-${{ github.sha }}.zip
+                      artifacts_name: PCem-RelWithDebInfo-vNext-Windows-MINGW32-${{ github.run_number }}
+                      artifacts_path: PCem-RelWithDebInfo-vNext-Windows-MINGW32-${{ github.run_number }}-${{ github.sha }}.zip
                       installdeps: >-
                           base-devel
                           zip
@@ -46,8 +46,8 @@ jobs:
                       os: windows-latest
                       compiler: MINGW64
                       args: -DCMAKE_BUILD_TYPE=RelWithDebInfo -DPCEM_RELDEB_AS_RELEASE=OFF -DPCEM_VERSION_STRING="vNext build ${GITHUB_SHA::8}"
-                      artifacts_name: PCem-vNext-Windows-MINGW64-${{ github.run_number }}
-                      artifacts_path: PCem-${{ github.sha }}.zip
+                      artifacts_name: PCem-RelWithDebInfo-vNext-Windows-MINGW64-${{ github.run_number }}
+                      artifacts_path: PCem-RelWithDebInfo-vNext-Windows-MINGW64-${{ github.run_number }}-${{ github.sha }}.zip
                       installdeps: >-
                           base-devel
                           zip
@@ -163,6 +163,6 @@ jobs:
                   aws_key_id: ${{secrets.nte_cdn_s3_key_id}}
                   aws_secret_access_key: ${{secrets.nte_cdn_s3_secret_access_key}}
                   aws_bucket: pcem-dev-builds
-                  source_dir: ./dist
-                  destination_dir: ${{ matrix.artifacts_name }}
-                  endpoint: https://cdn.ntgecdn.com:443            
+                  source_dir: ./dist/${{ matrix.artifacts_path }}
+                  destination_dir: ''
+                  endpoint:  https://cdn.ntgecdn.com:443           
